Explored data a bit and reshaped NN

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@ MillionSongSubset/
 .venv/
 data/
 .ipynb_checkpoints/
+CppSrc/
+JavaSrc/
+MatlabSrc/
+NameNormalizer/
+PythonSrc/
+Tasks_Demos/
+track_ids.txt
+mfcc.csv
